<resources>
    <string name="app_name">PolyHackathon</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_checking">Checkin</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="confirn_password">Confirm password:</string>
    <string name="Login">Login</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="register">register</string>
    <string name="error_null_username">Please Enter Email</string>
    <string name="error_null_password">Please Enter Password</string>
    <string name="error_null_confirmPassword">Please Enter Confirm Password</string>
    <string name="error_confirmPasswordNotTrue">Confirm password not true</string>
    <string name="signout">Sign out</string>
    <string name="setPlaceHere">Set location school is here</string>
</resources>
