<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thanh.android.polyhackathon.LoginActivity">

    <EditText
        android:id="@+id/editText_username_registerActivity"
        android:hint="@string/username"
        android:layout_width="@dimen/width_main"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editText_password_registerActivity"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="@dimen/width_main"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/confirn_password"
        android:id="@+id/editText_confirmPassword_registerActivity"
        android:layout_width="@dimen/width_main"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_register_registerActivity"
        android:text="@string/register"
        android:layout_width="@dimen/width_main"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_login_registerActivity"
        android:text="@string/Login"
        android:layout_width="@dimen/width_main"
        android:layout_height="wrap_content" />
    <ProgressBar
        android:id="@+id/progressBar_loading_registerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
