<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thanh.android.polyhackathon.LoginActivity">

    <EditText
        android:id="@+id/editText_username_loginActivity"
        android:hint="@string/username"
        android:layout_width="@dimen/width_main"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editText_password_loginActivity"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="@dimen/width_main"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_login_loginActivity"
        android:text="@string/Login"
        android:layout_width="@dimen/width_main"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textView_forgotPassword_loginActivity"
        android:text="@string/forgotpass"
        android:gravity="right"
        android:layout_width="@dimen/width_main"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_register_loginActivity"
        android:text="@string/register"
        android:layout_width="@dimen/width_main"
        android:layout_height="wrap_content" />
    <ProgressBar
        android:id="@+id/progressBar_loading_loginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</LinearLayout>
